# modalchemy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  setup.bat  start.bat  update.bat
.github/workflows/: ci.yml
ai/: __init__.py  pyproject.toml
ai/datasets/: __init__.py  prepare_models.py  prepare_textures.py
ai/inference/: __init__.py  server.py
ai/model_gen/: __init__.py  generator.py  schema.py
ai/tests/: __init__.py  test_asset_export.py  test_inference_texture.py  test_model_gen.py  test_texture_gen.py
ai/texture_gen/: __init__.py  config.py  model.py  scheduler.py
ai/training/: __init__.py  bootstrap.py  texture_dataset.py  train_from_workspaces.py  train_texture.py
app/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Sidebar.tsx
app/src/pages/: AIStudioPage.tsx  ImportPage.tsx  LibraryPage.tsx  ModelGenPage.tsx  SettingsPage.tsx  TextureGenPage.tsx  WorkspacePage.tsx
backend/: pyproject.toml
backend/modforge/: __init__.py  config.py  main.py
backend/modforge/api/: decompile.py  library.py  settings.py  workspace.py
backend/modforge/decompiler/: __init__.py  pipeline.py  validator.py
backend/modforge/workspace/: __init__.py
backend/tests/: conftest.py  test_api.py  test_pipeline.py  test_validator.py
backend/tests/fixtures/: .gitkeep
docs/: ai-training.md  api-reference.md  architecture.md  configuration.md  decompilation.md  decompiler-plugins.md  development.md  hardware-requirements.md  testing.md  troubleshooting.md
scripts/: download-tools.py  setup-dev.ps1  setup-dev.sh  update-dev.ps1
tools/: .gitkeep
