[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai*", "inference*", "training*", "datasets*", "texture_gen*", "model_gen*"]

[project]
name = "modforge-ai"
version = "0.1.0"
description = "ModForge AI — texture and model generation for Minecraft mods"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "diffusers>=0.29.0",
    "transformers>=4.42.0",
    "accelerate>=0.31.0",
    "safetensors>=0.4.0",
    "Pillow>=10.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "outlines>=0.0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
