[package]
name = "modforge"
version = "0.1.0"
description = "ModForge — Minecraft Forge mod decompiler & AI generator"
authors = ["ModForge Contributors"]
edition = "2021"

[lib]
name = "modforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
